Fix horizontal scroll issue

--- a/src/components/app/css/layout.css
+++ b/src/components/app/css/layout.css
@@ -40,7 +40,8 @@ body {
   top: 0;
   left: 0;
   display: block;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .mainloader {
